src/objects/Student_temp__c.object
<CustomObject>
    <fields>
        <fullName>First_name__c</fullName>
        <label>First name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_temp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School_temp</label>
        <referenceTo>School_temp__c</referenceTo>
        <relationshipLabel>Student_temps</relationshipLabel>
        <relationshipName>Student_temps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>email_id__c</fullName>
        <label>email id</label>
        <type>Email</type>
    </fields>
    <label>Student_temp</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student_temp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student_temps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>